backend/src/main/java/com/example/lms/api/error/ApiError.java
package com.example.lms.api.error;

public record ApiError(String code, String message) {}
